--- a/packages/Barcode/package.json
+++ b/packages/Barcode/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "perkd-ui-components",
+  "name": "@perkd-ui-components/barcode",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -11,26 +11,14 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "sb": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.0-beta.39",
-    "@storybook/addon-interactions": "^7.0.0-beta.39",
-    "@storybook/addon-links": "^7.0.0-beta.39",
-    "@storybook/blocks": "^7.0.0-beta.39",
-    "@storybook/svelte": "^7.0.0-beta.39",
-    "@storybook/svelte-vite": "^7.0.0-beta.39",
-    "@storybook/testing-library": "^0.0.14-next.1",
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
     "@tsconfig/svelte": "^3.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "rollup-plugin-folder-input": "^1.0.1",
-    "storybook": "^7.0.0-beta.39",
-    "svelte": "^3.54.0",
     "svelte-check": "^2.10.0",
+    "svelte": "^3.54.0",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
