--- a/packages/MembershipCard/package.json
+++ b/packages/MembershipCard/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@perkd-ui/barcode",
+  "name": "@perkd-ui/membership-card",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -17,17 +17,22 @@
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
     "@tsconfig/svelte": "^3.0.0",
     "autoprefixer": "^10.4.13",
+    "node-sass": "^8.0.0",
     "postcss": "^8.4.21",
     "rollup-plugin-folder-input": "^1.0.1",
     "svelte": "^3.54.0",
     "svelte-check": "^2.10.0",
+    "svelte-preprocess": "^5.0.1",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "@twind/with-web-components": "^1.1.3",
     "@types/jsbarcode": "^3.11.1",
-    "jsbarcode": "^3.11.5"
+    "jsbarcode": "^3.11.5",
+    "sass": "^1.58.0",
+    "twind": "^0.16.19"
   }
 }
