--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "scripts": {
     "sb": "yarn workspace @perkd-ui/storybook run sb",
     "build": "yarn workspaces run build",
-    "yw": "yarn workspace"
+    "yw": "yarn workspace",
+    "new": "node ./.generator/index.mjs"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "dependencies": {
+    "kolorist": "^1.7.0",
+    "prompts": "^2.4.2"
+  }
 }
