--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
+    "composite": true,
+    "module": "ESNext",
     "target": "ESNext",
     "useDefineForClassFields": true,
-    "module": "ESNext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     /**
@@ -19,3 +20,6 @@
   "include": ["./packages/**/src/**/*.d.ts", "./packages/**/src/**/*.ts", "./packages/**/src/**/*.js", "./packages/**/src/**/*.svelte"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
+
+
+
