--- a/package.json
+++ b/package.json
@@ -11,14 +11,26 @@
     "npm": ">=8.0.0 <9.0.0",
     "node": ">=16.17.0"
   },
+  "bugs": {
+    "url": "https://github.com/perkd/web-components/issues"
+  },
   "scripts": {
     "sb": "yarn workspace @perkd-ui/storybook run sb",
     "build": "yarn workspaces run build",
-    "new": "node ./.generator/index.mjs"
+    "pretty": "yarn workspaces run pretty",
+    "lint": "yarn workspaces run lint",
+    "new": "node ./.generator/index.mjs",
+    "prepare": "husky install",
+    "format": "yarn prettier --write"
   },
   "devDependencies": {},
   "dependencies": {
+    "husky": "^8.0.3",
     "kolorist": "^1.7.0",
+    "lint-staged": "^13.1.2",
+    "pretty-quick": "^3.1.3",
     "prompts": "^2.4.2"
-  }
-}
+  },
+  "lint-staged": {
+    "packages/!(*shared|Storybook)/src/*.svelte": ["pretty", "lint"]
+  }}
