--- a/packages/AppletHeader/package.json
+++ b/packages/AppletHeader/package.json
@@ -9,19 +9,23 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "pretty": "npx prettier --config ../../.prettierrc --loglevel warn --write  \"./**/*.{ts,svelte,css,json}\" ",
+    "lint": "npx eslint --config ../../.eslintrc ./src --ext .svelte,.js,.ts, --quiet --fix"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
     "@tsconfig/svelte": "^3.0.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
+    "@typescript-eslint/parser": "^5.53.0",
+    "eslint": "^8.34.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "prettier": "^2.8.4",
+    "prettier-plugin-svelte": "^2.9.0",
     "rollup-plugin-folder-input": "^1.0.1",
     "svelte": "^3.54.0",
     "svelte-check": "^2.10.0",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
-  },
-  "dependencies": {}
+  }
 }
