--- a/packages/ImageLoader/package.json
+++ b/packages/ImageLoader/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "pretty": "npx prettier --config ../../.prettierrc --loglevel warn --write  \"./**/*.{ts,svelte,css,json}\" ",
+    "lint": "npx eslint --config ../../.eslintrc ./src --ext .svelte,.js,.ts, --quiet --fix"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
@@ -23,7 +23,11 @@
     "svelte-preprocess": "^5.0.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "eslint": "^8.34.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "prettier": "^2.8.4",
+    "prettier-plugin-svelte": "^2.9.0"
   },
   "dependencies": {
     "@twind/with-web-components": "^1.1.3",
@@ -31,5 +35,6 @@
     "jsbarcode": "^3.11.5",
     "sass": "^1.58.0",
     "twind": "^0.16.19"
-  }
+  },
+  "postinstall": "husky install"
 }
