--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,13 +13,15 @@
      * Disable checkJs if you'd like to use dynamic types in JS.
      * Note that setting allowJs false does not prevent the use
      * of JS in `.svelte` files.
-     */    
+     */
     "allowJs": true,
     "checkJs": true,
     "isolatedModules": true
   },
-  "include": ["./packages/**/src/**/*.d.ts", "./packages/**/src/**/*.ts", "./packages/**/src/**/*.js", "./packages/**/src/**/*.svelte"]
+  "include": [
+    "./packages/**/src/**/*.d.ts",
+    "./packages/**/src/**/*.ts",
+    "./packages/**/src/**/*.js",
+    "./packages/**/src/**/*.svelte"
+  ]
 }
-
-
-
