--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,7 @@
   "trailingComma": "es5",
   "tabWidth": 2,
   "arrowParens": "avoid",
+  "bracketSpacing": true,
   "htmlWhitespaceSensitivity": "css",
   "semi": false,
   "useTabs": false,
