--- a/packages/AppletHeader/package.json
+++ b/packages/AppletHeader/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@perkd-ui/c-appletheader",
+  "name": "@ui/c-appletheader",
   "private": true,
   "version": "0.1.0",
   "type": "module",
